--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,15 @@ jobs:
 
     - name: Check and Create .env if Not Exist
       run: |
-        ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no root@152.42.214.115 'if [ ! -f /var/www/api_erp/.env ]; then cp /var/www/api_erp/.env.example /var/www/api_erp/.env; fi'
+        ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no root@152.42.214.115 '
+          if [ ! -f /var/www/api_erp/.env ]; then
+            cp /var/www/api_erp/.env.example /var/www/api_erp/.env;
+            echo ".env file has been created.";
+          else
+            echo ".env file already exists.";
+          fi
+          ls -l /var/www/api_erp/.env
+        '
 
     - name: Run Artisan Commands on VPS
       run: |
