--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,19 +37,19 @@ jobs:
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
         ssh-keyscan -H 152.42.214.115 >> ~/.ssh/known_hosts
+    - name: Check and Show .env from VPS
+   
 
     - name: Check and Create .env if Not Exist
       run: |
         ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no root@152.42.214.115 '
-          if [ ! -f /var/www/api_erp/.env ]; then
-            cp /var/www/api_erp/.env.example /var/www/api_erp/.env;
-            echo ".env file has been created.";
+          if [ -f /var/www/api_erp/.env ]; then
+            echo ".env file exists.";
+            echo "Contents of .env:";
+            cat /var/www/api_erp/.env
           else
-            echo ".env file already exists.";
+            echo ".env file does not exist on the server.";
           fi
-          ls -l /var/www/api_erp/.env
-          \echo "Contents of .env:"
-          cat /var/www/api_erp/.env
         '
 
     - name: Run Artisan Commands on VPS
