--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,17 +37,16 @@ jobs:
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
         ssh-keyscan -H 152.42.214.115 >> ~/.ssh/known_hosts
-    - name: Check and Create .env if Not Exist
+    - name: Create .env from GitHub Secret
       run: |
         ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no root@152.42.214.115 '
-          if [ -f /var/www/api_erp/.env ]; then
-            echo ".env file exists.";
-            echo "Contents of .env:";
-            cat /var/www/api_erp/.env
-          else
-            echo ".env file does not exist on the server.";
-          fi
+          echo "${{ secrets.ENV_CONTENT }}" > /var/www/api_erp/.env
+          chmod 644 /var/www/api_erp/.env
+          echo ".env file has been created from GitHub Secret.";
+          echo "Contents of .env:";
+          cat /var/www/api_erp/.env
         '
+
 
     - name: Run Artisan Commands on VPS
       run: |
