--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "Modules/Core/Helpers/ResponseHelper.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
