--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.3",
+        "bacon/bacon-qr-code": "^3.0",
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "nwidart/laravel-modules": "^11.1",
+        "pragmarx/google2fa-laravel": "^2.3",
         "spatie/laravel-permission": "^6.16"
     },
     "require-dev": {
