--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "league/flysystem-aws-s3-v3": "3.0",
         "nwidart/laravel-modules": "^11.1",
         "pragmarx/google2fa-laravel": "^2.3",
+        "spatie/laravel-activitylog": "^4.10",
         "spatie/laravel-permission": "^6.16"
     },
     "require-dev": {
