--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,13 @@
     "require": {
         "php": "^8.3",
         "bacon/bacon-qr-code": "^3.0",
+        "barryvdh/laravel-dompdf": "^3.1",
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "league/flysystem-aws-s3-v3": "3.0",
         "nwidart/laravel-modules": "^11.1",
+        "phpoffice/phpword": "^1.4",
         "pragmarx/google2fa-laravel": "^2.3",
         "spatie/laravel-activitylog": "^4.10",
         "spatie/laravel-permission": "^6.16"
